Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 3.3.0
-
ghx-label-1
Description
Reproduction:
tarmstrong@tarmstrong-box:~/Impala/incubator-impala$ start-impala-cluster.py -s1 --use_exclusive_coordinators; [localhost:21000] default> select * from tpch.lineitem order by l_orderkey limit 5; ERROR: Admission for query exceeded timeout 60000ms in pool default-pool. Queued reason: No healthy executor groups found for pool default-pool. [localhost:21000] default> select 1; ERROR: Admission for query exceeded timeout 60000ms in pool default-pool. Queued reason: No healthy executor groups found for pool default-pool.
I expected that the second query should run immediately since it doesn't actually need to be scheduled on any executors. I suspect this may be a regression from the executor group changes, but didn't confirm.